2005-09-01  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (make_link): support anchors in
	bracket links.

	* misc/plugin/orphan.rb (orphan_pages): code cleanup (reported by
	ISOBE, Kazuhiko).

2005-08-30  Kouhei Yanagita <yanagi@shakenbu.org>
	* misc/plugin/rss.rb (rss): deal with the If-Modified-Since header
	in a request.

2005-08-29  Kouhei Yanagita <yanagi@shakenbu.org>
	* test/test_hikifarm.rb (test_create_wiki): the test failed
	because one of the arguments of Hikifarm#create_wiki is lack.

	* test/test_default_parser.rb (test_link, test_url): add some tests.

	* style/default/parser.rb (inline_impl): the href of URL was not
	escaped at tokens of URL_RE.

2005-08-28  Kouhei Yanagita <yanagi@shakenbu.org>
	* test/test_default_parser.rb: (test_emphasis, test_strong,
	test_delete): add new test methods.

	* style/default/parser.rb: Remove the HikiStack class and use
	Array instead.  perform some refactorings.

	* misc/hikifarm/index.cgi: update HIKIFARM_RELEASE_DATE. I've
	forgotten to do it.

2005-08-26  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/db/flatfile.rb (set_references, get_references): store
	references as Array instead of csv String.

2005-08-25  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (make_link): display page names
	instead of page titles if @conf.use_wikiname is false.

2005-08-25  Kouhei Yanagita <yanagi@shakenbu.org>
	* misc/hikifarm/hiki.conf, misc/hikifarm/hikifarm.conf,
	misc/hikifarm/index.cgi: Hikifarm becomes to be able to set up
	a CGI file for file attachment (by Kouhei Sutou).

	* misc/plugin/attach.rb: moved from misc/plugin/attach/attach.rb to
	be able to select a attach.rb plugin without file copy.

2005-08-24  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/xmlrpc.rb (wiki.getPage, wiki.getAllPages): encode strings
	with base64.

	* misc/hiki-mode/hiki-mode.el (hiki-edit-save-page): escape page
	name (reported by YAA).

	* hiki/db/flatfile.rb: update a timestamp of a text file in minor